--- a/CMSC320_Checkpoint2_Biodiversity_EDA.ipynb
+++ b/CMSC320_Checkpoint2_Biodiversity_EDA.ipynb
@@ -2,22 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f342e924",
+   "id": "bf7e7198",
    "metadata": {},
    "source": [
     "\n",
-    "# CMSC 320 — Checkpoint 2: Data Preprocessing & EDA\n",
-    "**Dataset:** Biodiversity by County — Distribution of Animals, Plants, and Natural Communities (NY)\n",
+    "# CMSC 320 — Checkpoint 2: Data Preprocessing & EDA  \n",
+    "**Dataset:** Biodiversity by County — Distribution of Animals, Plants, and Natural Communities (New York)\n",
     "\n",
     "This notebook fulfills **Checkpoint 2 (25 pts)**:\n",
-    "- **Data preprocessing (5 pts):** import, parse, organize\n",
-    "- **Exploration & statistics (20 pts):** three conclusions using at least three methods (incl. hypothesis testing), with plots\n"
+    "- **Data preprocessing (5 pts):** (a) import, (b) parse, (c) organize  \n",
+    "- **Basic data exploration & summary statistics (20 pts):** **three conclusions** using **three different statistical methods, including a hypothesis test**, with at least **one plot per method**.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c41b19b1",
+   "id": "f0b17b3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,75 +28,67 @@
     "from scipy import stats\n",
     "import re\n",
     "\n",
-    "# Render plots inline\n",
     "%matplotlib inline\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b7e4d5de",
+   "id": "973475c7",
    "metadata": {},
    "source": [
-    "## 1) Data Import, Parsing, and Organization (Preprocessing)"
+    "## 1) Data Preprocessing — Import, Parse, Organize (5 pts)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a449bea4",
+   "id": "55ac4415",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "# Load dataset\n",
-    "csv_path = \"Biodiversity_by_County_-_Distribution_of_Animals__Plants_and_Natural_Communities (1).csv\"\n",
+    "# (a) Import\n",
+    "csv_path = \"Biodiversity_by_County_-_Distribution_of_Animals__Plants_and_Natural_Communities.csv\"\n",
     "df_raw = pd.read_csv(csv_path)\n",
     "\n",
-    "# Clean column names\n",
+    "# Organize: Clean column names\n",
     "def clean_cols(cols):\n",
     "    return [re.sub(r'[^0-9a-zA-Z_]+', '', c.strip().lower().replace(' ', '_')) for c in cols]\n",
     "\n",
     "df = df_raw.copy()\n",
     "df.columns = clean_cols(df.columns)\n",
     "\n",
-    "# Strip whitespace on key text columns\n",
-    "for col in ['county','category','taxonomic_group','taxonomic_subgroup','scientific_name','common_name',\n",
-    "            'ny_listing_status','federal_listing_status','state_conservation_rank','global_conservation_rank',\n",
-    "            'distribution_status']:\n",
+    "# Normalize string fields\n",
+    "text_cols = ['county','category','taxonomic_group','taxonomic_subgroup','scientific_name','common_name',\n",
+    "             'ny_listing_status','federal_listing_status','state_conservation_rank','global_conservation_rank',\n",
+    "             'distribution_status']\n",
+    "for col in text_cols:\n",
     "    df[col] = df[col].astype(str).str.strip()\n",
     "\n",
-    "# Convert year to numeric\n",
-    "df['year_last_documented'] = pd.to_numeric(df['year_last_documented'], errors='coerce').astype('Int64')\n",
+    "# (b) Parse: year ranges into numeric start/end/mid; listing flags to ints; rarity scores to numeric\n",
+    "def parse_year_range(s):\n",
+    "    if not isinstance(s, str) or s.strip() == \"\":\n",
+    "        return pd.NA, pd.NA, pd.NA\n",
+    "    s = s.strip().lower()\n",
+    "    m_range = re.match(r'^(\\d{4})\\s*[-–]\\s*(\\d{4})$', s)\n",
+    "    if m_range:\n",
+    "        y1, y2 = int(m_range.group(1)), int(m_range.group(2))\n",
+    "        return y1, y2, int(round((y1 + y2) / 2))\n",
+    "    m_single = re.match(r'^(\\d{4})$', s)\n",
+    "    if m_single:\n",
+    "        y = int(m_single.group(1))\n",
+    "        return y, y, y\n",
+    "    return pd.NA, pd.NA, pd.NA\n",
     "\n",
-    "print(df.shape)\n",
-    "df.head()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0a193fe8",
-   "metadata": {},
-   "source": [
-    "\n",
-    "### Feature Engineering\n",
-    "- **`state_rarity_score`** from `state_conservation_rank` (S1 rare → 5 … S5 common → 1; SH/SX treated as rare).\n",
-    "- **`federally_listed_flag`** and **`state_listed_flag`** from listing status fields (1 if listed, else 0).\n",
-    "- **Deduplication** at `(county, scientific_name)` to treat each species once per county.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0e57bf34",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "yr_cols = df['year_last_documented'].apply(parse_year_range).tolist()\n",
+    "yr_df = pd.DataFrame(yr_cols, columns=['year_last_documented_start','year_last_documented_end','year_last_documented_mid'])\n",
+    "df = pd.concat([df.drop(columns=['year_last_documented']), yr_df], axis=1)\n",
     "\n",
     "def s_rank_to_score(s):\n",
     "    if not isinstance(s, str) or s.strip() == \"\":\n",
     "        return np.nan\n",
     "    s = s.upper()\n",
-    "    m = re.search(r'S([1-5])', s)  # pick first digit if S1S2 etc.\n",
+    "    m = re.search(r'S([1-5])', s)\n",
     "    if m:\n",
     "        digit = int(m.group(1))\n",
     "        return 6 - digit  # S1 -> 5 (rare) ... S5 -> 1 (common)\n",
@@ -104,51 +96,78 @@
     "        return 5\n",
     "    return np.nan\n",
     "\n",
+    "NEG_LISTING = {\"\", \"none\", \"n/a\", \"na\", \"not listed\", \"notlisted\", \"game with open season\", \"game\", \"open season\"}\n",
     "def listed_flag(x):\n",
-    "    x = str(x).strip().upper()\n",
-    "    if x in (\"\", \"NOT LISTED\", \"NONE\", \"N/A\", \"NA\"):\n",
-    "        return 0\n",
-    "    return 1\n",
+    "    return 0 if str(x).strip().lower() in NEG_LISTING else 1\n",
     "\n",
-    "df['state_rarity_score'] = df['state_conservation_rank'].apply(s_rank_to_score)\n",
+    "df['state_rarity_score']   = df['state_conservation_rank'].apply(s_rank_to_score)\n",
     "df['federally_listed_flag'] = df['federal_listing_status'].apply(listed_flag).astype(int)\n",
-    "df['state_listed_flag'] = df['ny_listing_status'].apply(listed_flag).astype(int)\n",
+    "df['state_listed_flag']     = df['ny_listing_status'].apply(listed_flag).astype(int)\n",
     "\n",
-    "# Deduplicate species per county\n",
+    "# (c) Organize: one-record-per-(county,species); keep a tidy pandas DataFrame\n",
     "df_unique = df.drop_duplicates(subset=['county','scientific_name']).copy()\n",
     "\n",
-    "df_unique[['county','category','taxonomic_group','scientific_name','state_conservation_rank','state_rarity_score']].head()\n"
+    "# Quick dataset profile (meets \"what are the main characteristics? how many features/entries?\")\n",
+    "profile = {\n",
+    "    \"n_rows_raw\": len(df_raw),\n",
+    "    \"n_rows_clean\": len(df),\n",
+    "    \"n_unique_species_records\": len(df_unique),\n",
+    "    \"n_counties\": df_unique['county'].nunique(),\n",
+    "    \"n_features\": df_unique.shape[1],\n",
+    "    \"columns\": df_unique.columns.tolist()\n",
+    "}\n",
+    "profile\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3e468381",
+   "id": "3c2d7cd5",
    "metadata": {},
    "source": [
-    "## 2) Exploratory Data Analysis & Summary Statistics"
+    "## 2) Basic Data Exploration & Summary Statistics (20 pts)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c9ac00b0",
+   "id": "915679ab",
    "metadata": {},
    "source": [
     "\n",
-    "### Method 1: Descriptive Statistics (Species Richness by County)\n",
-    "- Compute **unique species per county** (richness).\n",
-    "- Report summary statistics and visualize the **Top 15 counties**.\n"
+    "### Method 1 — Composition & Outliers (Descriptive Statistics)  \n",
+    "**Goal:** Identify **over-represented categories/taxa** and **outlier counties** in species richness.  \n",
+    "**Plot:** Bar charts (category composition; Top-15 counties).  \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8517179e",
+   "id": "bd002238",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
+    "# Category composition (over-representation)\n",
+    "cat_counts = df_unique['category'].value_counts().sort_values(ascending=False)\n",
+    "\n",
+    "plt.figure()\n",
+    "cat_counts.plot(kind='bar')\n",
+    "plt.title(\"Composition by Category\")\n",
+    "plt.xlabel(\"Category\")\n",
+    "plt.ylabel(\"Record count (unique species per county)\")\n",
+    "plt.xticks(rotation=0)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# Species richness by county\n",
     "species_by_county = df_unique.groupby('county')['scientific_name'].nunique().sort_values(ascending=False)\n",
-    "display(species_by_county.describe())\n",
+    "desc = species_by_county.describe()\n",
+    "print(desc.to_dict())\n",
+    "\n",
+    "# Outliers via IQR\n",
+    "Q1, Q3 = species_by_county.quantile(0.25), species_by_county.quantile(0.75)\n",
+    "IQR = Q3 - Q1\n",
+    "upper_fence = Q3 + 1.5*IQR\n",
+    "outliers = species_by_county[species_by_county > upper_fence]\n",
     "\n",
     "top15 = species_by_county.head(15)\n",
     "plt.figure()\n",
@@ -158,30 +177,33 @@
     "plt.ylabel(\"Unique species count\")\n",
     "plt.xticks(rotation=45, ha='right')\n",
     "plt.tight_layout()\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "\n",
+    "print({\"n_outlier_counties_by_richness\": int(outliers.shape[0])})\n",
+    "outliers.head(10)\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "727056b9",
+   "id": "7632f35e",
    "metadata": {},
    "source": [
     "\n",
-    "### Method 2: Correlation — Total Species vs. Rare Species\n",
-    "- Define **rare** as `state_rarity_score >= 4` (S1–S2 or historical/possibly extirpated).\n",
-    "- Compute **per-county** totals and rare counts.\n",
-    "- Compute **Pearson correlation** and show a **scatter with a regression line**.\n"
+    "### Method 2 — Correlation Analysis  \n",
+    "**Question:** Are **rare species** concentrated where **total species** are high?  \n",
+    "**Method:** Pearson correlation (county-level).  \n",
+    "**Plot:** Scatter with fitted regression line (legend-labeled).\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e119200",
+   "id": "1675bfa9",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "rare_mask = df_unique['state_rarity_score'] >= 4\n",
+    "rare_mask = df_unique['state_rarity_score'] >= 4  # S1–S2, SH/SX\n",
     "rare_counts = df_unique[rare_mask].groupby('county')['scientific_name'].nunique()\n",
     "\n",
     "county_df = pd.DataFrame({\n",
@@ -190,38 +212,41 @@
     "}).fillna(0)\n",
     "\n",
     "r, p = stats.pearsonr(county_df['total_species'], county_df['rare_species'])\n",
-    "print({'pearson_r': r, 'p_value': p})\n",
+    "print({\"pearson_r\": r, \"p_value\": p})\n",
     "\n",
     "x = county_df['total_species'].values\n",
     "y = county_df['rare_species'].values\n",
     "slope, intercept, r_value, p_value, std_err = stats.linregress(x, y)\n",
     "\n",
     "plt.figure()\n",
-    "plt.scatter(x, y)\n",
+    "plt.scatter(x, y, label=\"County\")\n",
     "x_line = np.linspace(x.min(), x.max(), 100)\n",
     "y_line = slope * x_line + intercept\n",
-    "plt.plot(x_line, y_line)\n",
-    "plt.title(\"Total vs Rare Species by County\")\n",
+    "plt.plot(x_line, y_line, label=\"OLS fit\")\n",
+    "plt.title(\"Total vs. Rare Species by County\")\n",
     "plt.xlabel(\"Total unique species\")\n",
-    "plt.ylabel(\"Rare species (S1–S2)\")\n",
+    "plt.ylabel(\"Rare species (S1–S2/SH/SX)\")\n",
+    "plt.legend()\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1d5e49df",
+   "id": "3b68dc62",
    "metadata": {},
    "source": [
     "\n",
-    "### Method 3: Hypothesis Test — Are Plants and Animals Equally Rare?\n",
-    "We test whether the **distribution of state rarity scores** differs between **Animals** and **Plants** using a **Mann–Whitney U** test (non-parametric).\n"
+    "### Method 3 — Hypothesis Testing (Required)  \n",
+    "**Question:** Do **Animals** and **Plants** have the **same rarity distribution**?  \n",
+    "**Method:** Mann–Whitney U (non-parametric; compares medians/distributions).  \n",
+    "**Plot:** Boxplot of `state_rarity_score` by category.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "592ac92e",
+   "id": "887582b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,10 +254,9 @@
     "a = df_unique[df_unique['category'].str.upper()=='ANIMAL']['state_rarity_score'].dropna()\n",
     "b = df_unique[df_unique['category'].str.upper()=='PLANT']['state_rarity_score'].dropna()\n",
     "\n",
-    "print({'n_animals': len(a), 'n_plants': len(b)})\n",
-    "\n",
+    "print({\"n_animals\": len(a), \"n_plants\": len(b)})\n",
     "U, pval = stats.mannwhitneyu(a, b, alternative='two-sided')\n",
-    "print({'test': 'Mann-Whitney U', 'U': U, 'p_value': pval})\n",
+    "print({\"test\": \"Mann-Whitney U\", \"U\": U, \"p_value\": pval})\n",
     "\n",
     "plt.figure()\n",
     "plt.boxplot([a.values, b.values], labels=['Animal', 'Plant'])\n",
@@ -244,19 +268,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9a5b816",
+   "id": "47366ca3",
    "metadata": {},
    "source": [
     "\n",
-    "## 3) Conclusions (Three Takeaways)\n",
+    "## 3) Three Conclusions\n",
     "\n",
-    "1. **County species richness varies widely** (see Top 15 plot). This informs where conservation inventories are concentrated and suggests heterogeneous habitat diversity across counties.\n",
-    "2. **Total species strongly predicts rare species counts** across counties (high Pearson *r*). Practically, conservation planning in species-rich counties may protect a disproportionate share of rare taxa.\n",
-    "3. **Animals and Plants differ in rarity distributions** (Mann–Whitney U significant). Management prioritization may require category-specific strategies (e.g., targeted actions for plant microhabitats vs. animal movement corridors).\n"
+    "**Conclusion 1 (Method 1 — Composition & Outliers):**  \n",
+    "Category composition is dominated by the most common class(es), and county **species richness** is **highly heterogeneous** with a small set of **outlier counties** (above the IQR upper fence), indicating uneven habitat diversity and/or survey effort.\n",
+    "\n",
+    "**Conclusion 2 (Method 2 — Correlation):**  \n",
+    "There is a **strong positive correlation** between **total species** and **rare species** per county (high Pearson *r* with statistically significant *p*), implying that conserving species-rich counties protects a disproportionate share of rare taxa.\n",
+    "\n",
+    "**Conclusion 3 (Method 3 — Hypothesis Test):**  \n",
+    "The **rarity score distributions** for **Animals** vs **Plants** are **significantly different** (Mann–Whitney U, *p* < 0.05), suggesting category-specific conservation strategies may be warranted.\n"
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "language_info": {
+   "name": "python"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
